--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "cors": "^2.8.5",
+    "naija-state-local-government": "^1.1.2",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
