--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-google-login": "^5.2.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.1.0",
+    "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
